Finalização da criação e aplicação da função data

--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -10,8 +10,9 @@
         <link rel="stylesheet" href="/static/CSS/global.css">
         <!-- Link Arquivo CSS -->
          <link rel="stylesheet" href="/static/CSS/RF003-solic.css">
-        <!-- Link Arquivo JS -->
+        <!-- Link Arquivos JS -->
          <script defer src="/static/JS/RF003-solic.js"></script>
+         <script defer src="/static/JS/funcao-data.js"></script>
          <!-- Link para os ICONS -->
          <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
          <!-- Link para o Ajax -->
@@ -25,7 +26,7 @@
                     <button class="container-header_btn-voltar" href=''><i class="fa-solid fa-arrow-left"></i>Voltar</button>
                 </div>
                 <div class="container-header_data">
-                    <p class="dia-semana">Qui</p><p class="dia">10</p><p class="mes">Set</p>
+                    <p class="dia-semana" id="dia-semana">Qui</p><p class="dia" id="dia">10</p><p class="mes" id="mes">Set</p>
                 </div>
             </section>
             <section class="container-header-user">
