--- a/templates/RF004-ADMrecbSolic.html
+++ b/templates/RF004-ADMrecbSolic.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/CSS/global.css">
     <link rel="stylesheet" href="/static/CSS/RF004-ADMrecbSolic.css">
+    <script defer src="/static/JS/funcao-data.js"></script>
     <title>EASY-REQUEST - Inicial</title>
 </head>
 <body>
@@ -15,11 +16,11 @@
             <div class="header__button"></div>
             <div class="header__date">
                 <!-- Dia da semana -->
-                <p class="header__day-of-week" aria-label="Dia da semana">Qui</p>
+                <p class="header__day-of-week" aria-label="Dia da semana" id="dia-semana">Qui</p>
                 <!-- Dia do mês -->
-                <p class="header__day" aria-label="Dia do mês">10</p>
+                <p class="header__day" aria-label="Dia do mês" id="dia">10</p>
                 <!-- Mês -->
-                <p class="header__month" aria-label="Mês">Set</p>
+                <p class="header__month" aria-label="Mês" id="mes">Set</p>
             </div>
         </div>
         <!-- Informações do usuário logado -->
