Finalizando as alterações na página do RF004

--- a/static/CSS/RF004-ADMrecbSolic.css
+++ b/static/CSS/RF004-ADMrecbSolic.css
@@ -225,6 +225,11 @@ input, select {
     color: var(--color02); 
 }
 
+.card__button a{
+    color: var(--color02);
+    text-decoration: none;
+}
+
 /* 2 colunas para telas médias */
 @media (min-width: 740px) {
     .sectionBaixo__grid-section {
