--- a/templates/RF004-ADMrecbSolic.html
+++ b/templates/RF004-ADMrecbSolic.html
@@ -65,7 +65,7 @@
                     <div class="card">
                         <!-- Cabeçalho do card com localização do prédio -->
                         <header class="card__header">
-                            <span class="card__building" aria-label="Localização do prédio">{{x[2]}}</span>
+                            <span class="card__building" aria-label="Localização do prédio">{{x[2]}} - {{x[1]}}</span>
                         </header>
                         <div class="card__body">
                             <!-- Serviço descrito no card -->
