--- a/templates/RF008-fimchamado.html
+++ b/templates/RF008-fimchamado.html
@@ -42,14 +42,14 @@
                 <div class="galeria__topo">
                     <img class="galeria__imagem-perfil" src="https://miro.medium.com/v2/resize:fit:1200/1*g09N-jl7JtVjVZGcd-vL2g.jpeg" alt="Foto de perfil do responsável pelo chamado" width="100">
                     <div class="galeria__info">
-                        <div class="galeria__status" aria-label="Status do chamado">STATUS</div>
-                        <div class="galeria__tipo" aria-label="Tipo de chamado">Tipo</div>
-                        <div class="galeria__localizacao" aria-label="Localização do chamado">Aonde está</div>
+                        <div class="galeria__status" aria-label="Status do chamado"><p>STATUS</p></div>
+                        <div class="galeria__tipo" aria-label="Tipo de chamado"><p>TIPO</p></div>
+                        <div class="galeria__localizacao" aria-label="Localização do chamado"><P>Aonde está</P></div>
                     </div>
                 </div>
-                <div class="galeria__descricao" aria-label="Descrição do chamado">Descrição do chamado</div>
-                <button class="galeria__botao-encerrar" aria-label="Botão para encerrar o chamado">Encerrar chamado</button>
-                <button class="galeria__botao-Mais " aria-label="Botão para encerrar o chamado">Mais</button>
+                <div class="galeria__descricao" aria-label="Descrição do chamado"><p>Descrição do chamado</p></div>
+                <button class="galeria__botao-encerrar" aria-label="Botão para encerrar o chamado"><p>Encerrar chamado</p></button>
+                <button class="galeria__botao-Mais " aria-label="Botão para encerrar o chamado"><p>Mais</p></button>
             </article>  
           
         </div>
