--- a/templates/RF004-ADMrecbSolic.html
+++ b/templates/RF004-ADMrecbSolic.html
@@ -76,7 +76,7 @@
                         </div>
                         <!-- Rodapé do card com botão de ação -->
                         <div class="card__footer">
-                            <button class="card__button" aria-label="Encaminhar solicitação">Encaminhar</button>
+                            <button class="card__button" aria-label="Encaminhar solicitação"><a href="/RF004A?solicitacao={{recebe['id_servico']}}">Encaminhar</a></button>
                         </div>
                     </div>
                 </div>
@@ -85,3 +85,5 @@
     </main>
 </body>
 </html>
+
+
