--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -16,8 +16,10 @@
     </head>
     <body>
         <main>
+            <!-- Container para a inserção da imagem de fundo -->
             <section class="container-main">
             </section>
+            <!-- Container para o Formulario de Login -->
             <div class="container-form">
                 <form action="/RF002" method="POST">
                     <h1>Login</h1>
@@ -30,6 +32,7 @@
             </div>
         </main>
         <footer>
+            <!-- Container com a Logo do Projeto -->
             <section class="container-footer">
                 <img src="/static/IMG/Brand Identity and Design.svg" alt="Logo Easy Request">
             </section>
