--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -39,31 +39,31 @@
                 <!-- Campo de entrada para o nome completo -->
                 <div class="form-container__input">
                     <label for="nome" class="form-container__label">Nome completo:</label>
-                    <input type="text" id="nome" name="nome" class="form-container__input-text" placeholder="Digite seu nome completo">
+                    <input type="text" id="nome" name="nome" class="form-container__input-text" placeholder="Digite seu nome completo" required>
                 </div>
 
                 <!-- Campo de entrada para o CPF -->
                 <div class="form-container__input">
                     <label for="cpf" class="form-container__label">CPF:</label>
-                    <input type="text" id="cpf" name="cpf" class="form-container__input-text" placeholder="Informe seu CPF">
+                    <input type="text" id="cpf" name="cpf" class="form-container__input-text" placeholder="Informe seu CPF" required>
                 </div>
 
                 <!-- Campo de entrada para o SN -->
                 <div class="form-container__input">
                     <label for="sn" class="form-container__label">SN:</label>
-                    <input type="text" id="sn" name="sn" class="form-container__input-text" placeholder="Informe seu SN">
+                    <input type="text" id="sn" name="sn" class="form-container__input-text" placeholder="Informe seu SN" required>
                 </div>
 
                 <!-- Campo de entrada para o e-mail -->
                 <div class="form-container__input">
                     <label for="email" class="form-container__label">E-mail:</label>
-                    <input type="email" id="email" name="email" class="form-container__input-text" placeholder="Digite seu e-mail">
+                    <input type="email" id="email" name="email" class="form-container__input-text" placeholder="Digite seu e-mail" required>
                 </div>
 
                 <!-- Campo de entrada para a senha -->
                 <div class="form-container__input">
                     <label for="senha" class="form-container__label">Senha:</label>
-                    <input type="password" id="senha" name="senha" class="form-container__input-text" placeholder="Crie uma senha">
+                    <input type="password" id="senha" name="senha" class="form-container__input-text" placeholder="Crie uma senha" required>
                 </div>
 
                 <!-- Campo de upload de foto -->
