Criando o html e arrumando o lengh do campo adendo da tela RF003

--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="form_adendo">
                         <label for="adendo">Adendo:</label>
-                        <input type="text" id="adendo" name="adendo" placeholder="Digite informações adicionais..." maxlength="60">
+                        <input type="text" id="adendo" name="adendo" placeholder="Digite informações adicionais...">
                     </div>
                     <button type="submit" class="form_btn-enviar" onclick="fazerSolicitacao()">Enviar Solicitação</button>
                 </div>
