--- a/static/CSS/RF007-manutConfirm.css
+++ b/static/CSS/RF007-manutConfirm.css
@@ -1,250 +1,74 @@
-
-
-html{
-    width: 40rem;
+/* Estilo do Header */
+.header {
+    width: 100vw; 
 }
 
-
-/*                                FORMATAÇÃO NAV                                 */ 
-
-.container-nav{
-    height: 100px;
-    width: 40rem;
+/* Container da Data e Botão */
+.header__date-container {
+    height: 5vh; 
+    display: flex; 
+    justify-content: space-between; 
+}
+.container-header_btn{
     display: flex;
-    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
-
-/*      formataçao area do adm      */
-.usuario{
-    text-align: right;
-    height: 50%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-}
-.usuario h4{
-    justify-content: end;
-    align-self: self-end;
-    font-size: 1.5rem;
-    margin-bottom: 5px;
-}
-.usuario__imagem{
-    justify-content: end;
-    align-self: self-end;
-    width: 3.5rem;
-    height: 3.5rem;
-    border-radius: 3rem;
-    margin-right: 1rem;
-    padding: 3px;
-}
-
-
-/*       botao de voltar     */
-.botaoVoltar{
-    height: 50%;
-    justify-content: start;
-    align-self: self-start;
-    font-size: 2.3rem;
-    margin-left: 2rem;
-}
-.botaoVoltar button{
+.container-header_btn-voltar{
+    margin: 1rem;
+    padding: 0.5rem;
+    width: 10rem;
+    border-color: var(--color02);
+    border-radius: 5rem;
     background: none;
-    border: none;
-    font-size: 2.1rem;
+    font-weight: 700;
+    
+    transition-duration: 0.2s;
+}
+
+.container-header_btn-voltar i{
+    margin-right: 0.5rem;
+ }
+
+ /* Mudança de Cor do botão ao passar o cursor por cima */
+.container-header_btn-voltar:hover{
+    border-color: none;
+    background-color: var(--color02);
+    color: var(--color01);
 }
 
 
-
-/*                                 FORMATAÇÃO MAIN                                 */ 
-
-/*  formatação container do main   */
-.container-main{
-    background-color: var(--color06);
-    width: 40rem;
-    height: 90vh;
-    margin-bottom: 0;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    border-top-left-radius: 4rem;
-    border-top-right-radius: 4rem;
+.header__day-of-week {
+    color: var(--color05); 
+    font-weight: 600; 
 }
 
-
-
-/*      Formatação da area de escolha - situaçao da tarefa */
-
-.opcoes{
-    margin-top: 1rem;
-    width: 37rem;
-    height: 20rem;
+/* Área do Usuário */
+.header__user-info {
+    height: 15vh; 
     display: flex;
-    flex-direction: column;
-}
-.opcoes label{
-    font-size: 17px;
-    padding: 0.70rem;
-}
-
-
-
-/*       formataçao da area da caixa de texto         */
-
-.container-main .texto-confirmar{
-    font-size: 2.4rem;
-    text-align: center;
-    color: white;
-    margin-top: 3rem;
+    align-items: center; 
+    justify-content: flex-end;
+    width: 100vw; 
+    padding-left: 4rem; 
 }
 
-.container__situacao-tarefa{
-    margin-top: 35px;
-    margin-left: 15px;
-    margin-right: 15px;
-    width: 37rem;
-    height: 20rem;
-    color: #ccc;
-}
-.container__situacao-tarefa strong{
-    font-size: 17px;
-}
-.container__caixa-de-texto h3{
-    text-align: left;
-    margin-top: 13px;
-    font-size: 1.3rem;
-    color: white;
+.header__user-image {
+    height: 8rem; 
+    border-radius: 100%; 
+    margin-right: 1.5rem; 
 }
 
-
-
-/*       formatação caixa de texto         */
-.container__caixa-de-texto {
-    margin-top: 2px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align: center;
-}
-.caixa-texto {
-    width: 100%;
-    height: 150px; /* Altura da caixa de texto */
-    padding: 10px;
-    box-sizing: border-box; /* Inclui padding e bordas no tamanho total */
-    border: 1px solid #ccc;
-    border-radius: 4px; /* Bordas arredondadas */
-    margin-top: 14px;
+.header__user-name {
+    font-size: 2rem;
 }
 
-
-
-/*     Formataçao botao de finalizar tarefa        */
-
-.container__botao-finalizar {
-    width: 40rem;
-    margin-top: 0.3em;
-    text-align: center;
+.header__user-position {
+    background-color: var(--color05); 
+    color: var(--color01); 
+    margin-right: 10rem; 
+    text-align: center; 
+    padding: 0.4rem; 
+    border-radius: 5rem;
 }
-.container__botao-finalizar button{
-    padding: 15px 20px;
-    border: none;
-    background-color: var(--color03);
-    color: white;
-    border-radius: 3rem;
-    cursor: pointer;
-    margin: 0.3rem;
-    margin-top: 1.2rem;
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-.container__botao-finalizar:hover button{
-    background-color: #ffdd00;
-}
-
-
-
-
-/*                                   RESPONSIVIDADE                                */
-
-
-/*  ate 576px (menores que isso)    */
-@media screen and (max-width: 576px) {
-
-       /*                                 FORMATAÇÃO MAIN                                 */ 
-
-        /*  formatação container do main   */
-        .container-main{
-            width: 100%;
-            height: 85%;
-        }
-
-
-        /*       formataçao da area da caixa de texto         */
-
-        .container-main .texto-confirmar{
-            font-size: 2.4rem;
-            text-align: center;
-            margin-top: 3rem;
-        }
-
-        .container__situacao-tarefa{
-            width: 37rem;
-            height: 20rem;
-        }
-        .container__situacao-tarefa strong{
-            font-size: 17px;
-        }
-        .container__caixa-de-texto h3{
-            margin-top: 13px;
-            font-size: 1.3rem;
-        }
-
-
-
-        /*       formatação caixa de texto         */
-        .container__caixa-de-texto {
-            margin-top: 2px;
-            margin-left: 20px;
-            margin-right: 20px;
-            text-align: center;
-        }
-        .caixa-texto {
-            width: 100%;
-            height: 150px; /* Altura da caixa de texto */
-            padding: 10px;
-            margin-top: 14px;
-        }
-   
-
-        /*     Formataçao botao de finalizar tarefa        */
-
-        .container__botao-finalizar {
-            width: 40rem;
-            margin-top: 0.3em;
-            text-align: center;
-        }
-        .container__botao-finalizar button{
-            padding: 15px 20px;
-            border: none;
-            background-color: var(--color03);
-            color: white;
-            border-radius: 3rem;
-            cursor: pointer;
-            margin: 0.3rem;
-            margin-top: 1.2rem;
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-        .container__botao-finalizar:hover button{
-            background-color: #ffdd00;
-        }
-
-
-
-    }
-
-
-
-
-/* igual e maior que 600px */
-@media screen and (min-width: 600px) {}
