Responsividade em processo

--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -47,6 +47,41 @@
                             <p class="status_n-disponivel">Não Disponível</p>
                         </div>
 
+                        <div class="option caixa-option">
+                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
+                            <div class="option_user"><p>Pintor</p>Heitor Lima </div>
+                            <p class="status_disponivel">Disponível</p>
+                            <p class="status_n-disponivel">Não Disponível</p>
+                        </div>
+
+                        <div class="option caixa-option">
+                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
+                            <div class="option_user"><p>Pintor</p>Heitor Lima </div>
+                            <p class="status_disponivel">Disponível</p>
+                            <p class="status_n-disponivel">Não Disponível</p>
+                        </div>
+
+                        <div class="option caixa-option">
+                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
+                            <div class="option_user"><p>Pintor</p>Heitor Lima </div>
+                            <p class="status_disponivel">Disponível</p>
+                            <p class="status_n-disponivel">Não Disponível</p>
+                        </div>
+
+                        <div class="option caixa-option">
+                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
+                            <div class="option_user"><p>Pintor</p>Heitor Lima </div>
+                            <p class="status_disponivel">Disponível</p>
+                            <p class="status_n-disponivel">Não Disponível</p>
+                        </div>
+
+                        <div class="option caixa-option">
+                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
+                            <div class="option_user"><p>Pintor</p>Heitor Lima </div>
+                            <p class="status_disponivel">Disponível</p>
+                            <p class="status_n-disponivel">Não Disponível</p>
+                        </div>
+
                     </div>
                     
                     <div class="form_btn-emergencia">
