--- a/static/CSS/RF005-encamSolic.css
+++ b/static/CSS/RF005-encamSolic.css
@@ -137,6 +137,7 @@ main{
   background-color: var(--colorGreen);
   font-size: 1.5rem;
   border-radius: 0.5rem;
+  display: none;
 }
 
 .status_n-disponivel{
@@ -144,7 +145,8 @@ main{
   background-color: var(--colorRed);
   border-radius: 0.5rem;
   font-size: 1.5rem;
-  display: none;
+  text-align: center;
+  
 }
 
 /* Estilo da Escolha da urgencia/emergencia */
@@ -187,6 +189,9 @@ main{
 }
 
 /* Estilo do botão 'Enviar Solicitação' */
+.btn-enviar{
+  text-align: center;
+}
 button{
     width: 20rem;
     padding: 0.9rem;
@@ -203,6 +208,18 @@ button{
 
 button:hover{
       background: none;
-      border: 1px solid var(--color03);
+      border: none;
       color: var(--color03);
+}
+
+/* ----------RESPONSIVIDADE----------- */
+
+@media (min-width: 360px){
+  .status_n-disponivel{
+    padding: 0.4rem 0.5rem 0.4rem 0.5rem;
+    
+  }  
+  .urgency{
+   font-size: 1.2rem;
+    }
 }
