--- a/static/CSS/RF007-manutConfirm.css
+++ b/static/CSS/RF007-manutConfirm.css
@@ -1,74 +1,153 @@
-/* Estilo do Header */
-.header {
-    width: 100vw; 
+/* Estilo do Cabeçalho */
+.cabecalho {
+    width: 100vw;
 }
 
-/* Container da Data e Botão */
-.header__date-container {
-    height: 5vh; 
-    display: flex; 
-    justify-content: space-between; 
-}
-.container-header_btn{
+/* Container do Botão Voltar */
+.cabecalho__botao-container {
+    margin: 1rem 0 0 1.5rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
-.container-header_btn-voltar{
+.cabecalho__botao-voltar {
     margin: 1rem;
     padding: 0.5rem;
     width: 10rem;
-    border-color: var(--color02);
+    border: 2px solid var(--color02);
     border-radius: 5rem;
     background: none;
     font-weight: 700;
-    
     transition-duration: 0.2s;
 }
 
-.container-header_btn-voltar i{
+.cabecalho__botao-voltar i {
     margin-right: 0.5rem;
- }
+}
 
- /* Mudança de Cor do botão ao passar o cursor por cima */
-.container-header_btn-voltar:hover{
-    border-color: none;
+/* Mudança de cor do botão ao passar o cursor por cima */
+.cabecalho__botao-voltar:hover {
     background-color: var(--color02);
     color: var(--color01);
 }
 
-
-.header__day-of-week {
-    color: var(--color05); 
-    font-weight: 600; 
-}
-
-/* Área do Usuário */
-.header__user-info {
-    height: 15vh; 
+/* Estilo da Seção de Informações do Usuário */
+.cabecalho__info-usuario {
+    height: 15vh;
     display: flex;
-    align-items: center; 
-    justify-content: flex-end;
-    width: 100vw; 
-    padding-left: 4rem; 
+    align-items: center;
+    justify-content: flex-start;
+    width: 100vw;
+    padding-left: 4rem;
 }
 
-.header__user-image {
-    height: 8rem; 
-    border-radius: 100%; 
-    margin-right: 1.5rem; 
+.cabecalho__imagem-usuario {
+    height: 8rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
 }
 
-.header__user-name {
+.cabecalho__nome-usuario {
     font-size: 2rem;
 }
 
-.header__user-position {
-    background-color: var(--color05); 
-    color: var(--color01); 
-    margin-right: 10rem; 
-    text-align: center; 
-    padding: 0.4rem; 
+.cabecalho__cargo-usuario {
+    background-color: var(--color05);
+    color: var(--color01);
+    margin-right: 10rem;
+    text-align: center;
+    padding: 0.4rem;
     border-radius: 5rem;
+}
+
+/* Container principal */
+.principal__container {
+    width: 100vw;
+    height: 50rem;
+    background-color: var(--color06);
+    margin-bottom: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-top-left-radius: 10rem;
+    border-top-right-radius: 10rem;
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-evenly; */
+}
+
+/* Título principal */
+.principal__titulo {
+    color: var(--color01);
+    font-size: 2.5rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    padding: 1rem;
+}
+
+/* Estilo do Formulário */
+.formulario-finalizar {
+    width: 100%;
+    padding: 2rem;
+    display: flex;
+    gap: 1.5rem;
+    flex-direction: column;
+}
+
+/* Título das opções do formulário */
+.formulario-finalizar__titulo {
+    color: var(--color01);
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+}
+
+/* Estilo das opções de rádio */
+.formulario-finalizar__opcao {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.formulario-finalizar__input {
+    accent-color: var(--color04);
+}
+
+.formulario-finalizar__texto {
+    color: var(--color01);
+    font-size: 1.6rem;
+    padding: 1rem 0;
+}
+
+/* Campo de comentários */
+.formulario-finalizar__comentarios {
+    width: 100%;
+    height: 5rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    border: 1px solid var(--color01);
+    font-size: 1rem;
+    color: var(--color01);
+    background-color: var(--color06);
+    resize: none;
+    margin: 0 0 2rem 0;
+}
+
+/* Botão de Finalizar */
+.formulario-finalizar__botao {
+    width: 100%;
+    padding: 1rem;
+    background-color: var(--color04);
+    color: var(--color01);
+    font-size: 1.2rem;
+    font-weight: bold;
+    border-radius: 2rem;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.formulario-finalizar__botao:hover {
+    background-color: var(--color02);
 }
