--- a/templates/RF007-manutConfirm.html
+++ b/templates/RF007-manutConfirm.html
@@ -1,32 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/CSS/global.css">
     <link rel="stylesheet" href="/static/CSS/RF007-manutConfirm.css">
-    <title>Document</title>
+    <title>Finalizar Tarefa</title>
 </head>
+
 <body>
-     <!-- Área de Informação do Usuário -->
-     <header class="header">
-        <div class="container-header_btn">
-            <button class="container-header_btn-voltar" href=''><i class="fa-solid fa-arrow-left"></i>Voltar</button>
+    <!-- Cabeçalho com informações do usuário -->
+    <header class="cabecalho">
+        <div class="cabecalho__botao-container">
+            <button class="cabecalho__botao-voltar" href=''>
+                <i class="fa-solid fa-arrow-left"></i>Voltar
+            </button>
         </div>
+
         <!-- Informações do usuário logado -->
-        <section class="header__user-info">
-            <!-- Imagem de perfil do usuário com descrição acessível -->
-            <img src="/static/IMG/image 17exImgRogerio.png" alt="Imagem de Perfil de Claudio Silva" class="header__user-image">
-            <div class="header__user-details">
-                <!-- Nome do usuário -->
-                <h2 class="header__user-name">João Vitor</h2>
-                <!-- Cargo do usuário -->
-                <p class="header__user-position">Chefe de manutenção</p>
+        <section class="cabecalho__info-usuario">
+            <img src="/static/IMG/image 17exImgRogerio.png" alt="Imagem de Perfil de Claudio Silva" class="cabecalho__imagem-usuario">
+            <div class="cabecalho__detalhes-usuario">
+                <h2 class="cabecalho__nome-usuario">João Vitor</h2>
+                <p class="cabecalho__cargo-usuario">Chefe de manutenção</p>
             </div>
         </section>
     </header>
-    <main>
 
+    <!-- Conteúdo principal -->
+    <main class="principal">
+        <div class="principal__container">
+            <p class="principal__titulo">Confirmar finalização de serviço</p>
+            <form class="formulario-finalizar">
+                <div class="formulario-finalizar__opcoes">
+                    <p class="formulario-finalizar__titulo">Escolha uma das opções:</p>
+
+                    <label class="formulario-finalizar__opcao">
+                        <input type="radio" name="opcao" class="formulario-finalizar__input" />
+                        <span class="formulario-finalizar__texto">Não foi possível realizar a tarefa</span>
+                    </label>
+
+                    <label class="formulario-finalizar__opcao">
+                        <input type="radio" name="opcao" class="formulario-finalizar__input" />
+                        <span class="formulario-finalizar__texto">Foi realizado mas necessita de outros cuidados</span>
+                    </label>
+
+                    <label class="formulario-finalizar__opcao">
+                        <input type="radio" name="opcao" class="formulario-finalizar__input" />
+                        <span class="formulario-finalizar__texto">Tarefa foi totalmente realizada</span>
+                    </label>
+                </div>
+
+                <div class="formulario-finalizar__caixa-texto">
+                    <textarea class="formulario-finalizar__comentarios" placeholder="Inserir informações adicionais (caso houver)"></textarea>
+                    <button type="submit" class="formulario-finalizar__botao">Finalizar tarefa</button>
+                </div>
+            </form>
+        </div>
     </main>
+
 </body>
+
 </html>
