Finalização da criação das funções relacionadas ao encaminhamento de funcionários

--- a/templates/RF004A-detlSolic.html
+++ b/templates/RF004A-detlSolic.html
@@ -31,7 +31,7 @@
                 <p class="detalhes-solicitacao__texto-descricao">
                     {{campo_descricao}}
                 </p>
-                <a href=""><button class=" botao botao-cadastro">Encaminhar</button></a>
+                <a href="/RF005/{{campo_id_solicitacao}}"><button class=" botao botao-cadastro">Encaminhar</button></a>
             </div>
         </section>
     </main>
