--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -36,8 +36,6 @@
         </nav>
         <main>
             <section class="container-main">
-                <form action="" method="POST">
-
                     <div value="form_select-user" id="form_select-user" name="form_select-user" data-name="Heitor Lima" data-cargo="Pintor">
                         
                         <div class="option caixa-option">
@@ -92,11 +90,10 @@
                             <div class="option urgency" data-urgency="alta">Alta Urgência</div>
                         </div>
                         <div class="btn-enviar">
-                            <button href="/" type="submit">Enviar Solicitação</button>
+                            <a href="realizar-encaminhamento/{{campo_id_solicitacao}}"><button type="submit">Enviar Solicitação</button></a>
                         </div>
                     </div>
 
-                </form>
             </section>
         </main>        
     </body>
