--- a/templates/RF007-manutConfirm.html
+++ b/templates/RF007-manutConfirm.html
@@ -53,7 +53,8 @@
                 </div>
 
                 <div class="formulario-finalizar__caixa-texto">
-                    <textarea class="formulario-finalizar__comentarios" placeholder="Inserir informações adicionais (caso houver)"></textarea>
+                    <p class="formulario-finalizar__titulo">Inserir informações adicionais (caso houver):</p>
+                    <textarea class="formulario-finalizar__comentarios" placeholder="Digite aqui"></textarea>
                     <button type="submit" class="formulario-finalizar__botao">Finalizar tarefa</button>
                 </div>
             </form>
