--- a/static/CSS/RF007-manutConfirm.css
+++ b/static/CSS/RF007-manutConfirm.css
@@ -5,7 +5,7 @@
 
 /* Container do Botão Voltar */
 .cabecalho__botao-container {
-    margin: 1rem 0 0 1.5rem;
+    margin: 0.5rem 0 0 0.5rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -36,14 +36,14 @@
 .cabecalho__info-usuario {
     height: 15vh;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     width: 100vw;
     padding-left: 4rem;
 }
 
 .cabecalho__imagem-usuario {
-    height: 8rem;
+    height: 7rem;
     border-radius: 50%;
     margin-right: 1.5rem;
 }
@@ -64,14 +64,14 @@
 /* Container principal */
 .principal__container {
     width: 100vw;
-    height: 50rem;
+    height: auto;
     background-color: var(--color06);
     margin-bottom: 0;
     position: absolute;
     bottom: 0;
     left: 0;
-    border-top-left-radius: 10rem;
-    border-top-right-radius: 10rem;
+    border-top-left-radius: 7rem;
+    border-top-right-radius: 7rem;
     padding: 1.5rem;
     display: flex;
     flex-direction: column;
@@ -84,13 +84,13 @@
     font-size: 2.5rem;
     text-align: center;
     margin-bottom: 1rem;
-    padding: 1rem;
+    padding: 1rem 3rem 0 3rem;
 }
 
 /* Estilo do Formulário */
 .formulario-finalizar {
     width: 100%;
-    padding: 2rem;
+    padding: 1.5rem;
     display: flex;
     gap: 1.5rem;
     flex-direction: column;
@@ -108,6 +108,7 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    padding-left: 1rem;
 }
 
 .formulario-finalizar__input {
@@ -117,13 +118,13 @@
 .formulario-finalizar__texto {
     color: var(--color01);
     font-size: 1.6rem;
-    padding: 1rem 0;
+    padding: 0.5rem 0 0.5rem 0;
 }
 
 /* Campo de comentários */
 .formulario-finalizar__comentarios {
     width: 100%;
-    height: 5rem;
+    height: 9rem;
     padding: 1rem;
     border-radius: 0.5rem;
     border: 1px solid var(--color01);
@@ -138,16 +139,28 @@
 .formulario-finalizar__botao {
     width: 100%;
     padding: 1rem;
-    background-color: var(--color04);
+    background-color: var(--color05);
     color: var(--color01);
     font-size: 1.2rem;
     font-weight: bold;
     border-radius: 2rem;
     border: none;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s cubic-bezier(0, -0.02, 0.64, 0.69);
 }
 
 .formulario-finalizar__botao:hover {
-    background-color: var(--color02);
+    background-color: var(--color03);
+}
+
+/* Media Query para telas (acima de 1200px) */
+@media (min-width: 1200px) {
+    .formulario-finalizar  {
+        width: 100%;
+        padding: 1.5rem;
+        display: flex;
+        gap: 1.5rem;
+        flex-direction: row;
+        justify-content: center;
+    }
 }
