--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -38,44 +38,16 @@
             <section class="container-main">
                     <div value="form_select-user" id="form_select-user" name="form_select-user" data-name="Heitor Lima" data-cargo="Pintor">
                         
-                        <div class="option caixa-option">
+                        <div class="opcao caixa-opcao">
                             <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
-                            <div class="option_user"><p>Pintor</p>Heitor Lima </div>
+                            <div class="opcao_user"><p>Pintor</p>Heitor Lima </div>
                             <p class="status_disponivel">Disponível</p>
                             <p class="status_n-disponivel">Não Disponível</p>
                         </div>
 
-                        <div class="option caixa-option">
+                        <div class="opcao caixa-opcao">
                             <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
-                            <div class="option_user"><p>Pintor</p>Heitor Lima </div>
-                            <p class="status_disponivel">Disponível</p>
-                            <p class="status_n-disponivel">Não Disponível</p>
-                        </div>
-
-                        <div class="option caixa-option">
-                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
-                            <div class="option_user"><p>Pintor</p>Heitor Lima </div>
-                            <p class="status_disponivel">Disponível</p>
-                            <p class="status_n-disponivel">Não Disponível</p>
-                        </div>
-
-                        <div class="option caixa-option">
-                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
-                            <div class="option_user"><p>Pintor</p>Heitor Lima </div>
-                            <p class="status_disponivel">Disponível</p>
-                            <p class="status_n-disponivel">Não Disponível</p>
-                        </div>
-
-                        <div class="option caixa-option">
-                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
-                            <div class="option_user"><p>Pintor</p>Heitor Lima </div>
-                            <p class="status_disponivel">Disponível</p>
-                            <p class="status_n-disponivel">Não Disponível</p>
-                        </div>
-
-                        <div class="option caixa-option">
-                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
-                            <div class="option_user"><p>Pintor</p>Heitor Lima </div>
+                            <div class="opcao_user"><p>Pintor</p>Heitor Lima </div>
                             <p class="status_disponivel">Disponível</p>
                             <p class="status_n-disponivel">Não Disponível</p>
                         </div>
@@ -85,9 +57,9 @@
                     <div class="form_btn-emergencia">
                         <div class="form_btn-emergencia__titulo">Prioridade:</div>
                         <div class="botoes">
-                            <div class="option urgency" data-urgency="baixa">Baixa Urgência</div>
-                            <div class="option urgency" data-urgency="media">Média Urgência</div>
-                            <div class="option urgency" data-urgency="alta">Alta Urgência</div>
+                            <div class="opcaoUrgencia" data-urgency="baixa">Baixa Urgência</div>
+                            <div class="opcaoUrgencia" data-urgency="media">Média Urgência</div>
+                            <div class="opcaoUrgencia" data-urgency="alta">Alta Urgência</div>
                         </div>
                         <div class="btn-enviar">
                             <a href="realizar-encaminhamento/{{campo_id_solicitacao}}"><button type="submit">Enviar Solicitação</button></a>
