--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -52,6 +52,20 @@
                             <p class="status_n-disponivel">Não Disponível</p>
                         </div>
 
+                        <div class="opcao caixa-opcao">
+                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
+                            <div class="opcao_user"><p>Pintor</p>Heitor Lima </div>
+                            <p class="status_disponivel">Disponível</p>
+                            <p class="status_n-disponivel">Não Disponível</p>
+                        </div>
+
+                        <div class="opcao caixa-opcao">
+                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
+                            <div class="opcao_user"><p>Pintor</p>Heitor Lima </div>
+                            <p class="status_disponivel">Disponível</p>
+                            <p class="status_n-disponivel">Não Disponível</p>
+                        </div>
+
                     </div>
                     
                     <div class="form_btn-emergencia">
@@ -61,8 +75,8 @@
                             <div class="opcaoUrgencia" data-urgency="media">Média Urgência</div>
                             <div class="opcaoUrgencia" data-urgency="alta">Alta Urgência</div>
                         </div>
-                        <div class="btn-enviar">
-                            <a href="realizar-encaminhamento/{{campo_id_solicitacao}}"><button type="submit">Enviar Solicitação</button></a>
+                        <div class="container_btn-enviar">
+                            <button class="btn-enviar" type="submit"><a  href="realizar-encaminhamento/{{campo_id_solicitacao}}">Enviar Solicitação</a></button>
                         </div>
                     </div>
 
