--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -14,6 +14,8 @@
         <script defer src="/static/JS/RF005-encamSolic.js"></script>
         <!-- Link para os ICONS -->
         <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
+        <!-- link Arquivo JS função data -->
+         <script defer src="/static/JS/funcao-data.js"></script>
 
     </head>
     <body>
@@ -27,7 +29,7 @@
             </section>
             <section class="container-header-data">
                 <div class="data">
-                    <p class="dia-semana">Qui</p><p class="dia">10</p><p class="mes">Set</p>
+                    <p class="dia-semana" id="dia-semana">Qui</p><p class="dia" id="dia">10</p><p class="mes" id="mes">Set</p>
                 </div>
             </section>
         </header>
