--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -14,25 +14,25 @@
          <script defer src="/static/JS/RF006-TLmanuten.js"></script>
          <!-- Link para os ICONS -->
         <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
+        <!-- link Arquivo JS data -->
+         <script defer src="/static/JS/funcao-data.js"></script>
 
     </head>
     <body>
         <header>
-            <section class="container-comprimentacao">
-                <h2 class="comprimentacao">Boa Tarde</h2>
-            </section>
-            <section class="container">
-                <div class="container-header">
-                    <figure><img src="/" alt="Imagem de Perfil"></figure>
-                    <div class="container-header_user-info">
-                        <h2 class="container-header_user-nome">Paulo de Oliveira</h2>
-                        <p class="container-header_user-cargo">Supervisor de Manutenção</p>
-                    </div>
-                </div>
+            <section class="container-cumprimentacao">
+                <h2 id="cumprimentacao">Boa Tarde!</h2>
                 <div class="container-header-data">
                     <div class="data">
-                        <p class="dia-semana">Qui</p><p class="dia">10</p><p class="mes">Set</p>
+                        <p class="dia-semana" id="dia-semana">Qui</p><p class="dia" id="dia">10</p><p class="mes" id="mes">Set</p>
                     </div>
+                </div>
+            </section>
+            <section class="container-header-user">
+                <figure><img src="https://st4.depositphotos.com/11574170/25191/v/450/depositphotos_251916955-stock-illustration-user-glyph-color-icon.jpg" alt="Imagem de Perfil"></figure>
+                <div class="container-header-user_info">
+                    <h2 class="container-header-user_nome">Jorge</h2>
+                    <p class="container-header-user_cargo">Técnico</p>
                 </div>
             </section>
         </header>
