--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -48,14 +48,27 @@
                         <p class="local">Bloco A | Sala 01</p>
                    </div>
                    <div class="servico_urgencia">
-                        <p class="urgencia">Urgencia</p>
-                        <i class="fa-solid fa-arrow-right"></i>
+                        <p class="urgencia">Baixa Urgencia</p>
+                        <a href=""><i class="fa-solid fa-arrow-right"></i></a>
                    </div>
                 </div>
+
+                <div class="servico">
+                    <div class="servico_hora-local">
+                        <p class="hora">13h35</p>
+                        <p class="local">Bloco A | Sala 01</p>
+                   </div>
+                   <div class="servico_urgencia">
+                        <p class="urgencia">Urgencia</p>
+                        <a href=""><i class="fa-solid fa-arrow-right"></i></a>
+                   </div>
+                </div>
+
             </section>
 
             <!-- Serviços encaminhados -->
              <section class="container-servico-encaminhado">
+                <h2>Serviços Encaminhados</h2>
                 <div class="servico-encaminhado">
                     <p class="servico-encaminhado-dia-semana">QUI</p><p class="servico-encaminhado-dia">10</p>
                     <p class="servico-encaminhado-local">Bloco B | Sala 09</p>
